force-app/main/default/objects/Case/fields/Inquirer_Account__c.field-meta.xml
<CustomField>
    <fullName>Inquirer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Inquiries (Inquirer)</relationshipLabel>
    <relationshipName>Medical_Inquiries_Inquirer</relationshipName>
    <type>Lookup</type>
</CustomField>