force-app/main/default/objects/Case/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <label>Question Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efficacy</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Dosing</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Contraindications</fullName>
            </value>
            <value>
                <fullName>Drug Interactions</fullName>
            </value>
            <value>
                <fullName>Pregnancy/Lactation</fullName>
            </value>
            <value>
                <fullName>Off-label</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>